# archcomp

./: .gitignore  README.md  pyproject.toml
archcomp/: manage.py  urls.py
archcomp/archcomp/: __init__.py  apps.py  asgi.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
archcomp/archcomp/migrations/: 0001_initial.py  0002_uploadedfile_folderpath_alter_uploadedfile_uuid.py  0003_alter_uploadedfile_uuid.py
archcomp/archcomp/templates/: base.html  upload_file.html
