[tool.poetry]
name = "archcomp"
version = "0.1.0"
description = ""
authors = ["Walstan <walstanb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
celery = "^5.2.7"
redis = "^4.5.1"
rq = "^1.13.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
